--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  
+
 <header>
   <nav>
     <ul>
@@ -33,6 +33,28 @@
   </div>
 </section>
 
+<section class="background-story">
+  <div class="container">
+    <h2><i>From Farm to Functions</i></h2>
+    <div class="journey-timeline">
+      <div class="timeline-item">
+        <img src="farm.png" alt="Farm Life" class="timeline-icon">
+      </div>
+      <div class="timeline-arrow">&#8594;</div>
+      <div class="timeline-item">
+        <img src="soldier.png" alt="Military Service" class="timeline-icon-2">
+      </div>
+      <div class="timeline-arrow">&#8594;</div>
+      <div class="timeline-item">
+        <img src="webscript.png" alt="Software Developer" class="timeline-icon">
+      </div>
+    </div>
+    <p class="journey-description">
+      My path has been an exciting journey of growth and transformation. Starting from the humble beginnings of farm life, I understand that a good product comes from hard work and perseverance. My time in the military instilled discipline and leadership skills. Now, as a software developer, I combine these experiences with my passion for technology to create innovative solutions as part of a team.
+    </p>
+  </div>
+</section>
+
 <section>
   <div class="container2">
     <h2>Explore ProfileMe</h2>
@@ -44,12 +66,13 @@
   </div>
 </section>
 
-<section class="testimonial">
+<!-- <section class="testimonial">
   <div class="container">
     <br>
     <p><i>Page under construction.</i></p>
     <p><i>Thank you for your understanding.</i></p>
-    <!-- <h2>Testimonials</h2>
+
+    <h2>Testimonials</h2>
     <div>
       <img src="rock.png" alt="Testimonial 1">
       <p>"Exceeds expectations. It would be downright negligent to rate his performance similar to a bunch of people on the brink of being fired. Haha, as if that could ever happen!"</p>
@@ -59,9 +82,9 @@
       <img src="biden.png" alt="Testimonial 2">
       <p>"I can't imagine a better person to have on my staff. I would have him in the White House if his current company wasn't so dedicated to talent retention... What network is this? Where am I?"</p>
       <p>- Man I found walking outside my apartment</p>
-    </div> -->
+    </div>
   </div>
-</section>
+</section> -->
 
 <div *ngIf="showCreateProfileModal" class="modal-overlay">
   <div class="modal">
@@ -77,7 +100,7 @@
   </div>
 </div>
 
-<section>
+<section class="background-story">
   <div class="container">
     <h2>Site Feedback</h2>
     <p>For inqueries or to submit feedback, use the prompt below:</p>
