--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -58,7 +58,7 @@
 <section>
   <div class="container2">
     <h2>Explore ProfileMe</h2>
-    <p>ProfileMe is where you'll find quick access to available users' portfolios.<br>Navigate through {{ profileName }}'s pages as you please.</p>
+    <p>ProfileMe is a one-stop shop for viewing users' portfolios!<br>Navigate through {{ profileName }}'s profile as you please.</p>
     <p class="custom-h3">Click below to begin!</p>
     <a [routerLink]="['/about']">
       <img src="glass2.png" alt="Image 2">
