--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -3,7 +3,7 @@
     <ul>
       <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
       <li><a routerLink="/about" routerLinkActive="active">About</a></li>
-      <li><a routerLink="/technologies" routerLinkActive="active">Technologies</a></li>
+      <!-- <li><a routerLink="/technologies" routerLinkActive="active">Technologies</a></li> -->
       <li><a routerLink="/projects" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Projects</a></li>
     </ul>
   </nav>
