--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,7 +12,7 @@
     <ul>
       <li><a routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a></li>
       <li><a routerLink="/about" routerLinkActive="active">About</a></li>
-      <li><a routerLink="/technologies" routerLinkActive="active">Technologies</a></li>
+      <!-- <li><a routerLink="/technologies" routerLinkActive="active">Technologies</a></li> -->
       <li><a routerLink="/projects" routerLinkActive="active">Projects</a></li>
     </ul>
   </nav>
