--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -8,7 +8,7 @@
     <ul>
       <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
       <li><a routerLink="/about" routerLinkActive="active">About</a></li>
-      <li><a routerLink="/technologies" routerLinkActive="active">Technologies</a></li>
+      <!-- <li><a routerLink="/technologies" routerLinkActive="active">Technologies</a></li> -->
       <li><a routerLink="/projects" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Projects</a></li>
     </ul>
   </nav>
@@ -22,7 +22,7 @@
         <div class="project-image" *ngIf="!project.expanded">
           <img [src]="project.imageUrl" [alt]="project.title">
         </div>
-        <h2 class="project-title">{{project.title}}</h2>
+        <h2 class="project-title">{{project.title}}</h2> 
         <p class="project-description">{{project.description}}</p>
         <div class="project-tags" *ngIf="!project.expanded">
           <span class="tag" *ngFor="let tag of project.tags">{{tag}}</span>
