remove banner and coming soon

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -58,7 +58,7 @@
       <p>Create</p>
       <p>Customize</p>
       <p>Share</p>
-      <h3>Your portfolio. (Coming soon)</h3>
+      <h3>Your portfolio. (In progress)</h3>
     </div>
   </div>
 </main>
