--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,8 +18,8 @@
   </nav>
 </header>
 
-<section class="container_banner">
-</section>
+<!-- <section class="container_banner">
+</section> -->
 
 <section class="profile-selector">
   <div class="container-profile">
