improve about resume

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -43,6 +43,7 @@
           <span class="company">{{ job.company }}</span>
           <span class="duration">{{ job.duration }}</span>
         </div>
+        <p class="scope">{{ job.scope }}</p>
         <ul>
           <li *ngFor="let responsibility of job.responsibilities">{{ responsibility }}</li>
         </ul>
